# ksem-transformer

./: .gitignore  CHANGELOG.md  LICENSE  pyproject.toml
.github/workflows/: build-binary.yml  make-release.yml  on-pr-or-merge.yml  run-tests.yml
ksem_transformer/: __main__.py  base.json  note.py  test_note.py
ksem_transformer/cli/: __init__.py  from_ksem.py  to_ksem.py
ksem_transformer/models/: keyswitches.py  ksem_json_types.py  ksem_parsing.py  note_field.py  root.py
ksem_transformer/models/settings/: automation.py  control_pad.py  custom_bank.py  delay.py  midi_controls.py  router.py  settings.py  xy_pad.py
ksem_transformer/utils/: color.py  test_tree.py  tree.py  yaml_utils.py
ksem_transpiler/: example.yaml  note.py  test_note.py
ksem_transpiler/models/: custom_bank.py  keyswitches.py  ksem_json_types.py  meta_settings.py  midi_controls.py  note_field.py  root.py  serial_field.py  settings.py  utils.py  yaml_types.py
ksem_transpiler/models/settings/: midi_controls.py  settings.py  xy_pad.py
